:books: docs: Add comments Swagger
