# internal/adapters/delivery/docs/swagger.json
@@ -11,8 +11,13 @@
     },
     "basePath": "/api",
     "paths": {
-        "/reservations": {
+        "/reservation": {
             "get": {
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
                 "description": "Retorna uma lista de todas as reservas de salas",
                 "produces": [
                     "application/json"
@@ -21,15 +26,6 @@
                     "Reserva"
                 ],
                 "summary": "Lista todas as reservas de salas",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Token de autenticação do usuário",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -49,6 +45,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
                 "description": "Cria uma nova reserva de sala com base nos detalhes fornecidos",
                 "produces": [
                     "application/json"
@@ -59,13 +60,6 @@
                 "summary": "Cria uma nova reserva de sala",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Token de autenticação do usuário",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
                         "description": "Detalhes da reserva a ser criada",
                         "name": "reservationDTO",
                         "in": "body",
@@ -91,8 +85,13 @@
                 }
             }
         },
-        "/reservations/my": {
+        "/reservation/my": {
             "post": {
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
                 "description": "Cria uma nova reserva de sala com base nos detalhes fornecidos pelo usuário autenticado",
                 "produces": [
                     "application/json"
@@ -103,13 +102,6 @@
                 "summary": "Cria uma nova reserva de sala para o usuário autenticado",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Token de autenticação do usuário",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
                         "description": "Detalhes da reserva a ser criada",
                         "name": "reservationDTO",
                         "in": "body",
@@ -135,8 +127,13 @@
                 }
             }
         },
-        "/reservations/my/{id}": {
+        "/reservation/my/{id}": {
             "delete": {
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
                 "description": "Deleta uma reserva de sala do usuário autenticado com base no ID fornecido",
                 "produces": [
                     "application/json"
@@ -151,13 +148,6 @@
                         "description": "ID da reserva",
                         "name": "id",
                         "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Token de autenticação do usuário",
-                        "name": "Authorization",
-                        "in": "header",
                         "required": true
                     }
                 ],
@@ -177,8 +167,13 @@
                 }
             }
         },
-        "/reservations/room/{id_room}": {
+        "/reservation/room/{id_room}": {
             "get": {
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
                 "description": "Retorna as reservas de salas com base no ID da sala fornecido",
                 "produces": [
                     "application/json"
@@ -193,13 +188,6 @@
                         "description": "ID da sala",
                         "name": "id_room",
                         "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Token de autenticação do usuário",
-                        "name": "Authorization",
-                        "in": "header",
                         "required": true
                     }
                 ],
@@ -222,7 +210,7 @@
                 }
             }
         },
-        "/reservations/user/{id_user}": {
+        "/reservation/user/{id_user}": {
             "get": {
                 "description": "Retorna as reservas de salas com base no ID do usuário fornecido",
                 "produces": [
@@ -260,8 +248,13 @@
                 }
             }
         },
-        "/reservations/{id}": {
+        "/reservation/{id}": {
             "get": {
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
                 "description": "Retorna os detalhes de uma reserva de sala com base no ID fornecido",
                 "produces": [
                     "application/json"
@@ -276,13 +269,6 @@
                         "description": "ID da reserva",
                         "name": "id",
                         "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Token de autenticação do usuário",
-                        "name": "Authorization",
-                        "in": "header",
                         "required": true
                     }
                 ],
@@ -302,6 +288,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
                 "description": "Deleta uma reserva de sala com base no ID fornecido",
                 "produces": [
                     "application/json"
@@ -316,13 +307,6 @@
                         "description": "ID da reserva",
                         "name": "id",
                         "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Token de autenticação do usuário",
-                        "name": "Authorization",
-                        "in": "header",
                         "required": true
                     }
                 ],
@@ -342,7 +326,7 @@
                 }
             }
         },
-        "/rooms": {
+        "/room": {
             "get": {
                 "description": "Retorna uma lista de todas as salas disponíveis",
                 "produces": [
@@ -371,6 +355,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
                 "description": "Cria uma nova sala com os detalhes fornecidos",
                 "consumes": [
                     "application/json"
@@ -383,13 +372,6 @@
                 ],
                 "summary": "Cria uma nova sala",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Token de autenticação do usuário",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
                     {
                         "description": "Detalhes da sala a ser criada",
                         "name": "roomDTO",
@@ -416,8 +398,13 @@
                 }
             }
         },
-        "/rooms/image": {
+        "/room/image": {
             "post": {
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
                 "description": "Adiciona uma imagem a uma sala com base no ID fornecido",
                 "produces": [
                     "application/json"
@@ -427,13 +414,6 @@
                 ],
                 "summary": "Adiciona uma imagem a uma sala por ID",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Token de autenticação do usuário",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
                     {
                         "description": "Detalhes da imagem a ser adicionada",
                         "name": "imageDTO",
@@ -460,7 +440,7 @@
                 }
             }
         },
-        "/rooms/{cod}": {
+        "/room/{cod}": {
             "get": {
                 "description": "Retorna os detalhes de uma sala com base no código fornecido",
                 "produces": [
@@ -495,7 +475,7 @@
                 }
             }
         },
-        "/rooms/{id}": {
+        "/room/{id}": {
             "get": {
                 "description": "Retorna os detalhes de uma sala com base no ID fornecido",
                 "produces": [
@@ -530,6 +510,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
                 "description": "Deleta uma sala com base no ID fornecido",
                 "produces": [
                     "application/json"
@@ -539,13 +524,6 @@
                 ],
                 "summary": "Deleta uma sala por ID",
                 "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Token de autenticação do usuário",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
                     {
                         "type": "string",
                         "description": "ID da sala",
@@ -570,7 +548,7 @@
                 }
             }
         },
-        "/rooms/{id}/images": {
+        "/room/{id}/images": {
             "get": {
                 "description": "Retorna os detalhes de uma sala, incluindo suas imagens, com base no ID fornecido",
                 "produces": [
@@ -676,6 +654,11 @@
         },
         "/user/admin/{id_user}": {
             "put": {
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
                 "description": "Atualiza o status de administrador de um usuário com base no ID fornecido",
                 "produces": [
                     "application/json"
@@ -690,13 +673,6 @@
                         "description": "ID do usuário",
                         "name": "id_user",
                         "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Token de autenticação do usuário",
-                        "name": "Authorization",
-                        "in": "header",
                         "required": true
                     }
                 ],
@@ -718,6 +694,11 @@
         },
         "/user/email/{email}": {
             "delete": {
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
                 "description": "Deleta um usuário com base no email fornecido",
                 "produces": [
                     "application/json"
@@ -732,13 +713,6 @@
                         "description": "Email do usuário",
                         "name": "email",
                         "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Token de autenticação do usuário",
-                        "name": "Authorization",
-                        "in": "header",
                         "required": true
                     }
                 ],
@@ -797,6 +771,14 @@
         },
         "/user/name/{name}": {
             "get": {
+                "security": [
+                    {
+                        "bearerAuth": []
+                    },
+                    {
+                        "bearerAuth": []
+                    }
+                ],
                 "description": "Retorna uma lista de usuários com base no nome fornecido",
                 "produces": [
                     "application/json"
@@ -811,13 +793,6 @@
                         "description": "Nome do usuário",
                         "name": "name",
                         "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Token de autenticação do usuário",
-                        "name": "Authorization",
-                        "in": "header",
                         "required": true
                     }
                 ],
@@ -842,6 +817,11 @@
         },
         "/user/{email}": {
             "put": {
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
                 "description": "Atualiza informações de um usuário com base no email fornecido",
                 "produces": [
                     "application/json"
@@ -857,13 +837,6 @@
                         "name": "email",
                         "in": "path",
                         "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Token de autenticação do usuário",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
                     }
                 ],
                 "responses": {
@@ -878,6 +851,14 @@
         },
         "/user/{id}": {
             "get": {
+                "security": [
+                    {
+                        "bearerAuth": []
+                    },
+                    {
+                        "bearerAuth": []
+                    }
+                ],
                 "description": "Retorna os detalhes de um usuário com base no ID fornecido",
                 "produces": [
                     "application/json"
@@ -892,13 +873,6 @@
                         "description": "ID do usuário",
                         "name": "id",
                         "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Token de autenticação do usuário",
-                        "name": "Authorization",
-                        "in": "header",
                         "required": true
                     }
                 ],
